<resources>
    <string name="app_name">TodoListV2</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>
    <string name="action_del">Delete</string>
    <string name="task">Task</string>
    <string name="location">Location</string>
    <string name="detail">Detail</string>
    <string name="due_date">Due Date</string>
    <string name="priority">Priority</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="low">Low</string>
    <string name="medium">Med</string>
    <string name="high">High</string>
    <string name="title">Title</string>
    <string name="desc_click_open_map">Click Location to open google map</string>
    <string name="del_a_todo">Delete a todo</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="ok">OK</string>
    <string name="enter_task">Enter Task</string>
    <string name="please_select_an_item">Please select an item.</string>
    <string-array name="arr_priority">
        <item>High</item>
        <item>Med</item>
        <item>Low</item>
    </string-array>
</resources>
