<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.show.todolistv2.activities.MainDetailActivity">

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="OnBack"
        android:text="@string/back"
        android:textColor="@color/colorWrite"
        android:background="@drawable/cus_btn_selector_bg"
        android:shadowColor="@color/colorGray"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/txtTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="38dp"
        android:hint="@string/task"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/txtTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="93dp"

        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="46dp"
        android:hint="@string/due_date"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <TextView
        android:id="@+id/txtLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="171dp"

        android:onClick="onOpenMap"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="46dp"
        android:hint="@string/location"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <TextView
        android:id="@+id/txtDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="242dp"

        android:hint="@string/detail"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="46dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_click_open_map"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="46dp"
        android:layout_marginTop="154dp"

        android:textColor="@color/colorPrimary"/>

</android.support.constraint.ConstraintLayout>
