<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/txtID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/editTask"
        android:layout_width="1000dp"
        android:layout_height="wrap_content"
        android:hint="@string/task"
        android:layout_marginLeft="15dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <TextView
        android:id="@+id/txtCalendar"
        android:layout_width="1000dp"
        android:layout_height="wrap_content"
        android:hint="@string/due_date"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/editTask"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/editLocation"
        android:layout_width="1000dp"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/txtCalendar"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/editDetail"
        android:layout_width="1000dp"
        android:layout_height="wrap_content"

        android:layout_marginLeft="15dp"
        android:hint="@string/detail"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textAlignment="viewStart"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/spinnerPriority"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:id="@+id/spinnerPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/arr_priority"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/editLocation"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:onClick="onSave"
        android:text="@string/save"
        android:textColor="@color/colorWrite"
        android:background="@drawable/cus_btn_selector_bg"
        android:shadowColor="@color/colorGray"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_marginEnd="11dp"
        android:layout_alignBaseline="@+id/btnCancel"
        android:layout_alignBottom="@+id/btnCancel"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:onClick="onCancel"
        android:text="@string/cancel"
        android:textColor="@color/colorWrite"
        android:background="@drawable/cus_btn_selector_bg"
        android:shadowColor="@color/colorGray"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_below="@+id/editDetail"
        android:layout_alignStart="@+id/editDetail"
        android:layout_marginTop="28dp" />


</RelativeLayout>
